--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,19 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+    adminer:
+        image: adminer
+        restart: always
+        ports:
+            - 8080:8080
+        environment:
+            ADMINER_DEFAULT_DB_DRIVER: mysql_db_container
+            ADMINER_DEFAULT_DB_HOST: mysql
+            ADMINER_DEFAULT_DB_NAME: ${DB_DATABASE}
+        depends_on:
+            - mysql
+        networks:
+            - sail
     redis:
         image: 'redis:alpine'
         ports:
