--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@mdi/font": "^7.4.47",
         "@vitejs/plugin-vue": "^5.1.4",
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "vite": "^5.0",
+        "vuetify": "^3.7.2"
     }
 }
