--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "@vitejs/plugin-vue": "^5.1.4",
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
+        "sass": "^1.79.4",
         "vite": "^5.0",
+        "vue-router": "^4.0.13",
         "vuetify": "^3.7.2"
     }
 }
