通知に対応した

--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,8 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 SANCTUM_STATEFUL_DOMAINS=
 
 VITE_APP_NAME="${APP_NAME}"
+
+VITE_APP_URL=
+
+ONESIGNAL_APP_ID=xxxxxxxxxxxxxxxxxxxx
+ONESIGNAL_REST_API_KEY=xxxxxxxxxxxxxxxxxx
