--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "vue": "^3.5.12",
         "vue-router": "^4.0.13",
         "vuetify": "^3.7.2"
+    },
+    "dependencies": {
+        "@onesignal/onesignal-vue3": "^2.0.1"
     }
 }
