--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
         "pinia": "^2.2.4",
-        "sass": "^1.79.4",
+        "sass": "^1.80.3",
         "vite": "^5.0",
         "vue": "^3.5.12",
         "vue-router": "^4.0.13",
         "vuetify": "^3.7.2"
     },
     "dependencies": {
-        "@onesignal/onesignal-vue3": "^2.0.1"
+        "@onesignal/onesignal-vue3": "^2.0.1",
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.3",
+        "jquery": "^3.7.1",
+        "viewerjs": "^1.11.6"
     },
     "overrides": {
         "vite": {
