--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
         "vuetify": "^3.7.2"
     },
     "dependencies": {
+        "@lxf2513/vue3-clipboard": "^1.0.7",
         "@onesignal/onesignal-vue3": "^2.0.1",
         "@popperjs/core": "^2.11.8",
+        "@soerenmartius/vue3-clipboard": "^0.1.2",
         "bootstrap": "^5.3.3",
         "jquery": "^3.7.1",
         "viewerjs": "^1.11.6"
